themedir         = $(datadir)/themes
platadir         = $(DESTDIR)$(themedir)/Plata
luminedir        = $(DESTDIR)$(themedir)/Plata-Lumine
noirdir          = $(DESTDIR)$(themedir)/Plata-Noir
platacompactdir  = $(DESTDIR)$(themedir)/Plata-Compact
luminecompactdir = $(DESTDIR)$(themedir)/Plata-Lumine-Compact
noircompactdir   = $(DESTDIR)$(themedir)/Plata-Noir-Compact

shelldir   = $(srcdir)/gnome-shell
shell_file = \
	$(shelldir)/gnome-shell.css \
	$(shelldir)/gnome-shell-theme.gresource \
	$(shelldir)/key-enter.svg \
	$(shelldir)/key-enter-active.svg \
	$(shelldir)/key-hide.svg \
	$(shelldir)/key-layout.svg \
	$(shelldir)/key-shift.svg \
	$(shelldir)/key-shift-latched-uppercase.svg \
	$(shelldir)/key-shift-uppercase.svg \
	$(shelldir)/message-indicator-symbolic.svg \
	$(shelldir)/no-events.svg \
	$(shelldir)/no-notifications.svg \
	$(shelldir)/noise-texture.png \
	$(shelldir)/pad-osd.css \
	$(shelldir)/process-working.svg \
	$(shelldir)/toggle-off.svg \
	$(shelldir)/toggle-on.svg
shell_classic_file = \
	$(shelldir)/extensions/window-list/classic.css \
	$(shelldir)/extensions/window-list/stylesheet.css
shell_classic_readme_file = \
	$(srcdir)/sass/gnome-shell/README.window-list
shell_wtd_file = \
	$(shelldir)/extensions/workspaces-to-dock/workspaces-to-dock.css
if !GNOME_IS_320_TO_324
shell_gdm3_file = $(shelldir)/gdm3-Plata.css
endif
if !GNOME_IS_332_OR_NEWER
shell_asset_file = \
	$(shelldir)/assets/calendar-arrow-left-hover.svg \
	$(shelldir)/assets/calendar-arrow-left.svg \
	$(shelldir)/assets/calendar-arrow-right-hover.svg \
	$(shelldir)/assets/calendar-arrow-right.svg \
	$(shelldir)/assets/checkbox-hover.svg \
	$(shelldir)/assets/checkbox-off-hover.svg \
	$(shelldir)/assets/checkbox-off.svg \
	$(shelldir)/assets/checkbox.svg \
	$(shelldir)/assets/dash-placeholder.svg \
	$(shelldir)/assets/go-down.svg \
	$(shelldir)/assets/go-up.svg \
	$(shelldir)/assets/media-control-active.svg \
	$(shelldir)/assets/media-control-hover.svg \
	$(shelldir)/assets/more-results.svg \
	$(shelldir)/assets/window-close-active.svg \
	$(shelldir)/assets/window-close-hover.svg \
	$(shelldir)/assets/window-close.svg
endif
if GNOME_IS_332_OR_NEWER
shell_asset_file = \
	$(shelldir)/assets/checkbox-hover.svg \
	$(shelldir)/assets/checkbox-off-hover.svg \
	$(shelldir)/assets/checkbox-off.svg \
	$(shelldir)/assets/checkbox.svg \
	$(shelldir)/assets/dash-placeholder.svg \
	$(shelldir)/assets/go-down.svg \
	$(shelldir)/assets/go-up.svg \
	$(shelldir)/assets/media-control-active.svg \
	$(shelldir)/assets/media-control-hover.svg \
	$(shelldir)/assets/more-results.svg
endif
shell_extension_workspace_asset_file = \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-top.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-four.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-one.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-three.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-two.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-top.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-top.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-top.svg

shellluminedir   = $(srcdir)/gnome-shell-light
shell_lumine_file = \
	$(shellluminedir)/gnome-shell.css \
	$(shellluminedir)/gnome-shell-theme.gresource \
	$(shellluminedir)/key-enter.svg \
	$(shellluminedir)/key-enter-active.svg \
	$(shellluminedir)/key-hide.svg \
	$(shellluminedir)/key-layout.svg \
	$(shellluminedir)/key-shift.svg \
	$(shellluminedir)/key-shift-latched-uppercase.svg \
	$(shellluminedir)/key-shift-uppercase.svg \
	$(shellluminedir)/message-indicator-symbolic.svg \
	$(shellluminedir)/no-events.svg \
	$(shellluminedir)/no-notifications.svg \
	$(shellluminedir)/noise-texture.png \
	$(shellluminedir)/pad-osd.css \
	$(shellluminedir)/process-working.svg \
	$(shellluminedir)/toggle-off.svg \
	$(shellluminedir)/toggle-on.svg
shell_lumine_classic_file = \
	$(shellluminedir)/extensions/window-list/classic.css \
	$(shellluminedir)/extensions/window-list/stylesheet.css
shell_lumine_wtd_file = \
	$(shellluminedir)/extensions/workspaces-to-dock/workspaces-to-dock.css
if !GNOME_IS_320_TO_324
shell_lumine_gdm3_file  = $(shellluminedir)/gdm3-Plata-Lumine.css
endif
if !GNOME_IS_332_OR_NEWER
shell_lumine_asset_file = \
	$(shellluminedir)/assets/calendar-arrow-left-hover.svg \
	$(shellluminedir)/assets/calendar-arrow-left.svg \
	$(shellluminedir)/assets/calendar-arrow-right-hover.svg \
	$(shellluminedir)/assets/calendar-arrow-right.svg \
	$(shellluminedir)/assets/checkbox-hover.svg \
	$(shellluminedir)/assets/checkbox-off-hover.svg \
	$(shellluminedir)/assets/checkbox-off.svg \
	$(shellluminedir)/assets/checkbox.svg \
	$(shellluminedir)/assets/dash-placeholder.svg \
	$(shellluminedir)/assets/go-down.svg \
	$(shellluminedir)/assets/go-up.svg \
	$(shellluminedir)/assets/media-control-active.svg \
	$(shellluminedir)/assets/media-control-hover.svg \
	$(shellluminedir)/assets/more-results.svg \
	$(shellluminedir)/assets/window-close-active.svg \
	$(shellluminedir)/assets/window-close-hover.svg \
	$(shellluminedir)/assets/window-close.svg
endif
if GNOME_IS_332_OR_NEWER
shell_lumine_asset_file = \
	$(shellluminedir)/assets/checkbox-hover.svg \
	$(shellluminedir)/assets/checkbox-off-hover.svg \
	$(shellluminedir)/assets/checkbox-off.svg \
	$(shellluminedir)/assets/checkbox.svg \
	$(shellluminedir)/assets/dash-placeholder.svg \
	$(shellluminedir)/assets/go-down.svg \
	$(shellluminedir)/assets/go-up.svg \
	$(shellluminedir)/assets/media-control-active.svg \
	$(shellluminedir)/assets/media-control-hover.svg \
	$(shellluminedir)/assets/more-results.svg
endif

shellnoirdir    = $(srcdir)/gnome-shell-dark
shell_noir_file = \
	$(shellnoirdir)/gnome-shell.css \
	$(shellnoirdir)/gnome-shell-theme.gresource \
	$(shellnoirdir)/key-enter.svg \
	$(shellnoirdir)/key-enter-active.svg \
	$(shellnoirdir)/key-hide.svg \
	$(shellnoirdir)/key-layout.svg \
	$(shellnoirdir)/key-shift.svg \
	$(shellnoirdir)/key-shift-latched-uppercase.svg \
	$(shellnoirdir)/key-shift-uppercase.svg \
	$(shellnoirdir)/message-indicator-symbolic.svg \
	$(shellnoirdir)/no-events.svg \
	$(shellnoirdir)/no-notifications.svg \
	$(shellnoirdir)/noise-texture.png \
	$(shellnoirdir)/pad-osd.css \
	$(shellnoirdir)/process-working.svg \
	$(shellnoirdir)/toggle-off.svg \
	$(shellnoirdir)/toggle-on.svg
shell_noir_classic_file = \
	$(shellnoirdir)/extensions/window-list/classic.css \
	$(shellnoirdir)/extensions/window-list/stylesheet.css
shell_noir_wtd_file = \
	$(shellnoirdir)/extensions/workspaces-to-dock/workspaces-to-dock.css
if !GNOME_IS_320_TO_324
shell_noir_gdm3_file = $(shellnoirdir)/gdm3-Plata-Noir.css
endif
if !GNOME_IS_332_OR_NEWER
shell_noir_asset_file = \
	$(shellnoirdir)/assets/calendar-arrow-left-hover.svg \
	$(shellnoirdir)/assets/calendar-arrow-left.svg \
	$(shellnoirdir)/assets/calendar-arrow-right-hover.svg \
	$(shellnoirdir)/assets/calendar-arrow-right.svg \
	$(shellnoirdir)/assets/checkbox-hover.svg \
	$(shellnoirdir)/assets/checkbox-off-hover.svg \
	$(shellnoirdir)/assets/checkbox-off.svg \
	$(shellnoirdir)/assets/checkbox.svg \
	$(shellnoirdir)/assets/dash-placeholder.svg \
	$(shellnoirdir)/assets/go-down.svg \
	$(shellnoirdir)/assets/go-up.svg \
	$(shellnoirdir)/assets/media-control-active.svg \
	$(shellnoirdir)/assets/media-control-hover.svg \
	$(shellnoirdir)/assets/more-results.svg \
	$(shellnoirdir)/assets/window-close-active.svg \
	$(shellnoirdir)/assets/window-close-hover.svg \
	$(shellnoirdir)/assets/window-close.svg
endif
if GNOME_IS_332_OR_NEWER
shell_noir_asset_file = \
	$(shellnoirdir)/assets/checkbox-hover.svg \
	$(shellnoirdir)/assets/checkbox-off-hover.svg \
	$(shellnoirdir)/assets/checkbox-off.svg \
	$(shellnoirdir)/assets/checkbox.svg \
	$(shellnoirdir)/assets/dash-placeholder.svg \
	$(shellnoirdir)/assets/go-down.svg \
	$(shellnoirdir)/assets/go-up.svg \
	$(shellnoirdir)/assets/media-control-active.svg \
	$(shellnoirdir)/assets/media-control-hover.svg \
	$(shellnoirdir)/assets/more-results.svg
endif

shellcompactdir   = $(srcdir)/gnome-shell-compact
shell_compact_file = \
	$(shellcompactdir)/gnome-shell.css \
	$(shellcompactdir)/gnome-shell-theme.gresource \
	$(shellcompactdir)/key-enter.svg \
	$(shellcompactdir)/key-enter-active.svg \
	$(shellcompactdir)/key-hide.svg \
	$(shellcompactdir)/key-layout.svg \
	$(shellcompactdir)/key-shift.svg \
	$(shellcompactdir)/key-shift-latched-uppercase.svg \
	$(shellcompactdir)/key-shift-uppercase.svg \
	$(shellcompactdir)/message-indicator-symbolic.svg \
	$(shellcompactdir)/no-events.svg \
	$(shellcompactdir)/no-notifications.svg \
	$(shellcompactdir)/noise-texture.png \
	$(shellcompactdir)/pad-osd.css \
	$(shellcompactdir)/process-working.svg \
	$(shellcompactdir)/toggle-off.svg \
	$(shellcompactdir)/toggle-on.svg
shell_compact_classic_file = \
	$(shellcompactdir)/extensions/window-list/classic.css \
	$(shellcompactdir)/extensions/window-list/stylesheet.css
shell_compact_wtd_file = \
	$(shellcompactdir)/extensions/workspaces-to-dock/workspaces-to-dock.css
if !GNOME_IS_320_TO_324
shell_compact_gdm3_file = $(shellcompactdir)/gdm3-Plata-Compact.css
endif
if !GNOME_IS_332_OR_NEWER
shell_compact_asset_file = \
	$(shellcompactdir)/assets/calendar-arrow-left-hover.svg \
	$(shellcompactdir)/assets/calendar-arrow-left.svg \
	$(shellcompactdir)/assets/calendar-arrow-right-hover.svg \
	$(shellcompactdir)/assets/calendar-arrow-right.svg \
	$(shellcompactdir)/assets/checkbox-hover.svg \
	$(shellcompactdir)/assets/checkbox-off-hover.svg \
	$(shellcompactdir)/assets/checkbox-off.svg \
	$(shellcompactdir)/assets/checkbox.svg \
	$(shellcompactdir)/assets/dash-placeholder.svg \
	$(shellcompactdir)/assets/go-down.svg \
	$(shellcompactdir)/assets/go-up.svg \
	$(shellcompactdir)/assets/media-control-active.svg \
	$(shellcompactdir)/assets/media-control-hover.svg \
	$(shellcompactdir)/assets/more-results.svg \
	$(shellcompactdir)/assets/window-close-active.svg \
	$(shellcompactdir)/assets/window-close-hover.svg \
	$(shellcompactdir)/assets/window-close.svg
endif
if GNOME_IS_332_OR_NEWER
shell_compact_asset_file = \
	$(shellcompactdir)/assets/checkbox-hover.svg \
	$(shellcompactdir)/assets/checkbox-off-hover.svg \
	$(shellcompactdir)/assets/checkbox-off.svg \
	$(shellcompactdir)/assets/checkbox.svg \
	$(shellcompactdir)/assets/dash-placeholder.svg \
	$(shellcompactdir)/assets/go-down.svg \
	$(shellcompactdir)/assets/go-up.svg \
	$(shellcompactdir)/assets/media-control-active.svg \
	$(shellcompactdir)/assets/media-control-hover.svg \
	$(shellcompactdir)/assets/more-results.svg
endif

shellluminecompactdir   = $(srcdir)/gnome-shell-light-compact
shell_lumine_compact_file = \
	$(shellluminecompactdir)/gnome-shell.css \
	$(shellluminecompactdir)/gnome-shell-theme.gresource \
	$(shellluminecompactdir)/key-enter.svg \
	$(shellluminecompactdir)/key-enter-active.svg \
	$(shellluminecompactdir)/key-hide.svg \
	$(shellluminecompactdir)/key-layout.svg \
	$(shellluminecompactdir)/key-shift.svg \
	$(shellluminecompactdir)/key-shift-latched-uppercase.svg \
	$(shellluminecompactdir)/key-shift-uppercase.svg \
	$(shellluminecompactdir)/message-indicator-symbolic.svg \
	$(shellluminecompactdir)/no-events.svg \
	$(shellluminecompactdir)/no-notifications.svg \
	$(shellluminecompactdir)/noise-texture.png \
	$(shellluminecompactdir)/pad-osd.css \
	$(shellluminecompactdir)/process-working.svg \
	$(shellluminecompactdir)/toggle-off.svg \
	$(shellluminecompactdir)/toggle-on.svg
shell_lumine_compact_classic_file = \
	$(shellluminecompactdir)/extensions/window-list/classic.css \
	$(shellluminecompactdir)/extensions/window-list/stylesheet.css
shell_lumine_compact_wtd_file = \
	$(shellluminecompactdir)/extensions/workspaces-to-dock/workspaces-to-dock.css
if !GNOME_IS_320_TO_324
shell_lumine_compact_gdm3_file = $(shellluminecompactdir)/gdm3-Plata-Lumine-Compact.css
endif
if !GNOME_IS_332_OR_NEWER
shell_lumine_compact_asset_file = \
	$(shellluminecompactdir)/assets/calendar-arrow-left-hover.svg \
	$(shellluminecompactdir)/assets/calendar-arrow-left.svg \
	$(shellluminecompactdir)/assets/calendar-arrow-right-hover.svg \
	$(shellluminecompactdir)/assets/calendar-arrow-right.svg \
	$(shellluminecompactdir)/assets/checkbox-hover.svg \
	$(shellluminecompactdir)/assets/checkbox-off-hover.svg \
	$(shellluminecompactdir)/assets/checkbox-off.svg \
	$(shellluminecompactdir)/assets/checkbox.svg \
	$(shellluminecompactdir)/assets/dash-placeholder.svg \
	$(shellluminecompactdir)/assets/go-down.svg \
	$(shellluminecompactdir)/assets/go-up.svg \
	$(shellluminecompactdir)/assets/media-control-active.svg \
	$(shellluminecompactdir)/assets/media-control-hover.svg \
	$(shellluminecompactdir)/assets/more-results.svg \
	$(shellluminecompactdir)/assets/window-close-active.svg \
	$(shellluminecompactdir)/assets/window-close-hover.svg \
	$(shellluminecompactdir)/assets/window-close.svg
endif
if GNOME_IS_332_OR_NEWER
shell_lumine_compact_asset_file = \
	$(shellluminecompactdir)/assets/checkbox-hover.svg \
	$(shellluminecompactdir)/assets/checkbox-off-hover.svg \
	$(shellluminecompactdir)/assets/checkbox-off.svg \
	$(shellluminecompactdir)/assets/checkbox.svg \
	$(shellluminecompactdir)/assets/dash-placeholder.svg \
	$(shellluminecompactdir)/assets/go-down.svg \
	$(shellluminecompactdir)/assets/go-up.svg \
	$(shellluminecompactdir)/assets/media-control-active.svg \
	$(shellluminecompactdir)/assets/media-control-hover.svg \
	$(shellluminecompactdir)/assets/more-results.svg
endif

shellnoircompactdir     = $(srcdir)/gnome-shell-dark-compact
shell_noir_compact_file = \
	$(shellnoircompactdir)/gnome-shell.css \
	$(shellnoircompactdir)/gnome-shell-theme.gresource \
	$(shellnoircompactdir)/key-enter.svg \
	$(shellnoircompactdir)/key-enter-active.svg \
	$(shellnoircompactdir)/key-hide.svg \
	$(shellnoircompactdir)/key-layout.svg \
	$(shellnoircompactdir)/key-shift.svg \
	$(shellnoircompactdir)/key-shift-latched-uppercase.svg \
	$(shellnoircompactdir)/key-shift-uppercase.svg \
	$(shellnoircompactdir)/message-indicator-symbolic.svg \
	$(shellnoircompactdir)/no-events.svg \
	$(shellnoircompactdir)/no-notifications.svg \
	$(shellnoircompactdir)/noise-texture.png \
	$(shellnoircompactdir)/process-working.svg \
	$(shellnoircompactdir)/toggle-off.svg \
	$(shellnoircompactdir)/toggle-on.svg
shell_noir_compact_classic_file = \
	$(shellnoircompactdir)/extensions/window-list/classic.css \
	$(shellnoircompactdir)/extensions/window-list/stylesheet.css
shell_noir_compact_wtd_file = \
	$(shellnoircompactdir)/extensions/workspaces-to-dock/workspaces-to-dock.css
if !GNOME_IS_320_TO_324
shell_noir_compact_gdm3_file = $(shellnoircompactdir)/gdm3-Plata-Noir-Compact.css
endif
if !GNOME_IS_332_OR_NEWER
shell_noir_compact_asset_file = \
	$(shellnoircompactdir)/assets/calendar-arrow-left-hover.svg \
	$(shellnoircompactdir)/assets/calendar-arrow-left.svg \
	$(shellnoircompactdir)/assets/calendar-arrow-right-hover.svg \
	$(shellnoircompactdir)/assets/calendar-arrow-right.svg \
	$(shellnoircompactdir)/assets/checkbox-hover.svg \
	$(shellnoircompactdir)/assets/checkbox-off-hover.svg \
	$(shellnoircompactdir)/assets/checkbox-off.svg \
	$(shellnoircompactdir)/assets/checkbox.svg \
	$(shellnoircompactdir)/assets/dash-placeholder.svg \
	$(shellnoircompactdir)/assets/go-down.svg \
	$(shellnoircompactdir)/assets/go-up.svg \
	$(shellnoircompactdir)/assets/media-control-active.svg \
	$(shellnoircompactdir)/assets/media-control-hover.svg \
	$(shellnoircompactdir)/assets/more-results.svg \
	$(shellnoircompactdir)/assets/window-close-active.svg \
	$(shellnoircompactdir)/assets/window-close-hover.svg \
	$(shellnoircompactdir)/assets/window-close.svg
endif
if GNOME_IS_332_OR_NEWER
shell_noir_compact_asset_file = \
	$(shellnoircompactdir)/assets/checkbox-hover.svg \
	$(shellnoircompactdir)/assets/checkbox-off-hover.svg \
	$(shellnoircompactdir)/assets/checkbox-off.svg \
	$(shellnoircompactdir)/assets/checkbox.svg \
	$(shellnoircompactdir)/assets/dash-placeholder.svg \
	$(shellnoircompactdir)/assets/go-down.svg \
	$(shellnoircompactdir)/assets/go-up.svg \
	$(shellnoircompactdir)/assets/media-control-active.svg \
	$(shellnoircompactdir)/assets/media-control-hover.svg \
	$(shellnoircompactdir)/assets/more-results.svg
endif

cinnamondir   = $(srcdir)/cinnamon
cinnamon_file = \
	$(cinnamondir)/cinnamon.css
cinnamon_asset_checkbox_file = \
	$(cinnamondir)/assets/checkbox/checkbox-checked.svg \
	$(cinnamondir)/assets/checkbox/checkbox-unchecked.svg \
	$(cinnamondir)/assets/checkbox/radiobutton-checked.svg \
	$(cinnamondir)/assets/checkbox/radiobutton-unchecked.svg
cinnamon_asset_menu_file = \
	$(cinnamondir)/assets/menu/menu-hover.svg \
	$(cinnamondir)/assets/menu/menu-separator.svg \
	$(cinnamondir)/assets/menu/menu.svg \
	$(cinnamondir)/assets/menu/submenu.svg
cinnamon_asset_misc_file = \
	$(cinnamondir)/assets/misc/add-workspace-active.svg \
	$(cinnamondir)/assets/misc/add-workspace-hover.svg \
	$(cinnamondir)/assets/misc/add-workspace.svg \
	$(cinnamondir)/assets/misc/calendar-arrow-left.svg \
	$(cinnamondir)/assets/misc/calendar-arrow-right.svg \
	$(cinnamondir)/assets/misc/close-active.svg \
	$(cinnamondir)/assets/misc/close-hover.svg \
	$(cinnamondir)/assets/misc/close.svg \
	$(cinnamondir)/assets/misc/message.svg \
	$(cinnamondir)/assets/misc/osd.svg \
	$(cinnamondir)/assets/misc/overview-hover.svg \
	$(cinnamondir)/assets/misc/overview.svg \
	$(cinnamondir)/assets/misc/trash-icon.svg
cinnamon_asset_panel_file = \
	$(cinnamondir)/assets/panel/activities-active.svg \
	$(cinnamondir)/assets/panel/activities.svg
cinnamon_asset_switch_file = \
	$(cinnamondir)/assets/switch/switch-off.svg \
	$(cinnamondir)/assets/switch/switch-on.svg
cinnamon_asset_thumb_file = \
	$(cinnamondir)/assets/thumbnail.png

cinnamonluminedir    = $(srcdir)/cinnamon-light
cinnamon_lumine_file = \
	$(cinnamonluminedir)/cinnamon.css
cinnamon_lumine_asset_checkbox_file = \
	$(cinnamonluminedir)/assets/checkbox/checkbox-checked.svg \
	$(cinnamonluminedir)/assets/checkbox/checkbox-unchecked.svg \
	$(cinnamonluminedir)/assets/checkbox/radiobutton-checked.svg \
	$(cinnamonluminedir)/assets/checkbox/radiobutton-unchecked.svg
cinnamon_lumine_asset_menu_file = \
	$(cinnamonluminedir)/assets/menu/menu-hover.svg \
	$(cinnamonluminedir)/assets/menu/menu-separator.svg \
	$(cinnamonluminedir)/assets/menu/menu.svg \
	$(cinnamonluminedir)/assets/menu/submenu.svg
cinnamon_lumine_asset_misc_file = \
	$(cinnamonluminedir)/assets/misc/add-workspace-active.svg \
	$(cinnamonluminedir)/assets/misc/add-workspace-hover.svg \
	$(cinnamonluminedir)/assets/misc/add-workspace.svg \
	$(cinnamonluminedir)/assets/misc/calendar-arrow-left.svg \
	$(cinnamonluminedir)/assets/misc/calendar-arrow-right.svg \
	$(cinnamonluminedir)/assets/misc/close-active.svg \
	$(cinnamonluminedir)/assets/misc/close-hover.svg \
	$(cinnamonluminedir)/assets/misc/close.svg \
	$(cinnamonluminedir)/assets/misc/message.svg \
	$(cinnamonluminedir)/assets/misc/osd.svg \
	$(cinnamonluminedir)/assets/misc/overview-hover.svg \
	$(cinnamonluminedir)/assets/misc/overview.svg \
	$(cinnamonluminedir)/assets/misc/trash-icon.svg
cinnamon_lumine_asset_panel_file = \
	$(cinnamonluminedir)/assets/panel/activities-active.svg \
	$(cinnamonluminedir)/assets/panel/activities.svg
cinnamon_lumine_asset_switch_file = \
	$(cinnamonluminedir)/assets/switch/switch-off.svg \
	$(cinnamonluminedir)/assets/switch/switch-on.svg
cinnamon_lumine_asset_thumb_file = \
	$(cinnamonluminedir)/assets/thumbnail.png

cinnamonnoirdir    = $(srcdir)/cinnamon-dark
cinnamon_noir_file = \
	$(cinnamonnoirdir)/cinnamon.css
cinnamon_noir_asset_checkbox_file = \
	$(cinnamonnoirdir)/assets/checkbox/checkbox-checked.svg \
	$(cinnamonnoirdir)/assets/checkbox/checkbox-unchecked.svg \
	$(cinnamonnoirdir)/assets/checkbox/radiobutton-checked.svg \
	$(cinnamonnoirdir)/assets/checkbox/radiobutton-unchecked.svg
cinnamon_noir_asset_menu_file = \
	$(cinnamonnoirdir)/assets/menu/menu-hover.svg \
	$(cinnamonnoirdir)/assets/menu/menu-separator.svg \
	$(cinnamonnoirdir)/assets/menu/menu.svg \
	$(cinnamonnoirdir)/assets/menu/submenu.svg
cinnamon_noir_asset_misc_file = \
	$(cinnamonnoirdir)/assets/misc/add-workspace-active.svg \
	$(cinnamonnoirdir)/assets/misc/add-workspace-hover.svg \
	$(cinnamonnoirdir)/assets/misc/add-workspace.svg \
	$(cinnamonnoirdir)/assets/misc/calendar-arrow-left.svg \
	$(cinnamonnoirdir)/assets/misc/calendar-arrow-right.svg \
	$(cinnamonnoirdir)/assets/misc/close-active.svg \
	$(cinnamonnoirdir)/assets/misc/close-hover.svg \
	$(cinnamonnoirdir)/assets/misc/close.svg \
	$(cinnamonnoirdir)/assets/misc/message.svg \
	$(cinnamonnoirdir)/assets/misc/osd.svg \
	$(cinnamonnoirdir)/assets/misc/overview-hover.svg \
	$(cinnamonnoirdir)/assets/misc/overview.svg \
	$(cinnamonnoirdir)/assets/misc/trash-icon.svg
cinnamon_noir_asset_panel_file = \
	$(cinnamonnoirdir)/assets/panel/activities-active.svg \
	$(cinnamonnoirdir)/assets/panel/activities.svg
cinnamon_noir_asset_switch_file = \
	$(cinnamonnoirdir)/assets/switch/switch-off.svg \
	$(cinnamonnoirdir)/assets/switch/switch-on.svg
cinnamon_noir_asset_thumb_file = \
	$(cinnamonnoirdir)/assets/thumbnail.png

sassc_option = -M -t compact

# ****************************
# * Generate CSS stylesheets *
# ****************************

all:
if ENABLE_GNOME
	$(MKDIR_P) $(srcdir)/gnome-shell/assets
	$(MKDIR_P) $(srcdir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(srcdir)/gnome-shell/extensions/workspaces-to-dock/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-light/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-light/extensions/window-list
	$(MKDIR_P) $(srcdir)/gnome-shell-light/extensions/workspaces-to-dock/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-dark/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-dark/extensions/window-list
	$(MKDIR_P) $(srcdir)/gnome-shell-dark/extensions/workspaces-to-dock/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-compact/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-compact/extensions/window-list
	$(MKDIR_P) $(srcdir)/gnome-shell-compact/extensions/workspaces-to-dock/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-light-compact/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-light-compact/extensions/window-list
	$(MKDIR_P) $(srcdir)/gnome-shell-light-compact/extensions/workspaces-to-dock/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-dark-compact/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-dark-compact/extensions/window-list
	$(MKDIR_P) $(srcdir)/gnome-shell-dark-compact/extensions/workspaces-to-dock/assets

	cd $(srcdir)/sass && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell.scss ../gnome-shell/gnome-shell.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-light.scss ../gnome-shell-light/gnome-shell.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-dark.scss ../gnome-shell-dark/gnome-shell.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-compact.scss ../gnome-shell-compact/gnome-shell.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-light-compact.scss ../gnome-shell-light-compact/gnome-shell.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-dark-compact.scss ../gnome-shell-dark-compact/gnome-shell.css
if !GNOME_IS_320_TO_324
	cd $(srcdir)/sass && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gdm3.scss ../gnome-shell/gdm3-Plata.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gdm3-light.scss ../gnome-shell-light/gdm3-Plata-Lumine.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gdm3-dark.scss ../gnome-shell-dark/gdm3-Plata-Noir.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gdm3-compact.scss ../gnome-shell-compact/gdm3-Plata-Compact.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gdm3-light-compact.scss ../gnome-shell-light-compact/gdm3-Plata-Lumine-Compact.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/gdm3-dark-compact.scss ../gnome-shell-dark-compact/gdm3-Plata-Noir-Compact.css
endif

	cd $(srcdir)/sass && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/pad-osd.scss ../gnome-shell/pad-osd.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/pad-osd.scss ../gnome-shell-light/pad-osd.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/pad-osd.scss ../gnome-shell-dark/pad-osd.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/pad-osd.scss ../gnome-shell-compact/pad-osd.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/pad-osd.scss ../gnome-shell-light-compact/pad-osd.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/pad-osd.scss ../gnome-shell-dark-compact/pad-osd.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/stylesheet-dark.scss ../gnome-shell/extensions/window-list/stylesheet.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/stylesheet-light.scss ../gnome-shell-light/extensions/window-list/stylesheet.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/stylesheet-dark.scss ../gnome-shell-dark/extensions/window-list/stylesheet.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/stylesheet-dark.scss ../gnome-shell-compact/extensions/window-list/stylesheet.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/stylesheet-light.scss ../gnome-shell-light-compact/extensions/window-list/stylesheet.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/stylesheet-dark.scss ../gnome-shell-dark-compact/extensions/window-list/stylesheet.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/classic-dark.scss ../gnome-shell/extensions/window-list/classic.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/classic-light.scss ../gnome-shell-light/extensions/window-list/classic.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/classic-dark.scss ../gnome-shell-dark/extensions/window-list/classic.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/classic-dark.scss ../gnome-shell-compact/extensions/window-list/classic.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/classic-light.scss ../gnome-shell-light-compact/extensions/window-list/classic.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/classic-dark.scss ../gnome-shell-dark-compact/extensions/window-list/classic.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/workspaces-to-dock-dark.scss ../gnome-shell/extensions/workspaces-to-dock/workspaces-to-dock.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/workspaces-to-dock-light.scss ../gnome-shell-light/extensions/workspaces-to-dock/workspaces-to-dock.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/workspaces-to-dock-dark.scss ../gnome-shell-dark/extensions/workspaces-to-dock/workspaces-to-dock.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/workspaces-to-dock-dark.scss ../gnome-shell-compact/extensions/workspaces-to-dock/workspaces-to-dock.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/workspaces-to-dock-light.scss ../gnome-shell-light-compact/extensions/workspaces-to-dock/workspaces-to-dock.css && \
		$(SASSC) $(sassc_option) \
		gnome-shell/$(GNOME_SCSS_VERSION)/workspaces-to-dock-dark.scss ../gnome-shell-dark-compact/extensions/workspaces-to-dock/workspaces-to-dock.css

	cd $(srcdir)/asset && ./clone-assets-gnome-shell.sh

	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shelldir) \
				--target=$(shelldir)/gnome-shell-theme.gresource \
				$(srcdir)/sass/gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-theme.gresource.xml
	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shellluminedir) \
				--target=$(shellluminedir)/gnome-shell-theme.gresource \
				$(srcdir)/sass/gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-theme.gresource.xml
	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shellnoirdir) \
				--target=$(shellnoirdir)/gnome-shell-theme.gresource \
				$(srcdir)/sass/gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-theme.gresource.xml
	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shellcompactdir) \
				--target=$(shellcompactdir)/gnome-shell-theme.gresource \
				$(srcdir)/sass/gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-theme.gresource.xml
	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shellluminecompactdir) \
				--target=$(shellluminecompactdir)/gnome-shell-theme.gresource \
				$(srcdir)/sass/gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-theme.gresource.xml
	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shellnoircompactdir) \
				--target=$(shellnoircompactdir)/gnome-shell-theme.gresource \
				$(srcdir)/sass/gnome-shell/$(GNOME_SCSS_VERSION)/gnome-shell-theme.gresource.xml
endif

if ENABLE_CINNAMON
	$(MKDIR_P) $(srcdir)/cinnamon
	$(MKDIR_P) $(srcdir)/cinnamon-light
	$(MKDIR_P) $(srcdir)/cinnamon-dark

	cd $(srcdir)/sass && \
		$(SASSC) $(sassc_option) cinnamon/cinnamon.scss ../cinnamon/cinnamon.css && \
		$(SASSC) $(sassc_option) cinnamon/cinnamon-light.scss ../cinnamon-light/cinnamon.css && \
		$(SASSC) $(sassc_option) cinnamon/cinnamon-dark.scss ../cinnamon-dark/cinnamon.css

	$(MKDIR_P) $(srcdir)/cinnamon/assets
	$(MKDIR_P) $(srcdir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(srcdir)/cinnamon/assets/menu
	$(MKDIR_P) $(srcdir)/cinnamon/assets/misc
	$(MKDIR_P) $(srcdir)/cinnamon/assets/panel
	$(MKDIR_P) $(srcdir)/cinnamon/assets/switch
	$(MKDIR_P) $(srcdir)/cinnamon-light/assets
	$(MKDIR_P) $(srcdir)/cinnamon-light/assets/checkbox
	$(MKDIR_P) $(srcdir)/cinnamon-light/assets/menu
	$(MKDIR_P) $(srcdir)/cinnamon-light/assets/misc
	$(MKDIR_P) $(srcdir)/cinnamon-light/assets/panel
	$(MKDIR_P) $(srcdir)/cinnamon-light/assets/switch
	$(MKDIR_P) $(srcdir)/cinnamon-dark/assets
	$(MKDIR_P) $(srcdir)/cinnamon-dark/assets/checkbox
	$(MKDIR_P) $(srcdir)/cinnamon-dark/assets/menu
	$(MKDIR_P) $(srcdir)/cinnamon-dark/assets/misc
	$(MKDIR_P) $(srcdir)/cinnamon-dark/assets/panel
	$(MKDIR_P) $(srcdir)/cinnamon-dark/assets/switch
	cd $(srcdir)/asset && \
		./clone-assets-cinnamon.sh && \
		./render-assets-cinnamon-thumb.sh
endif

# *****************
# * Install files *
# *****************

install-data-local:
if ENABLE_GNOME
	$(MKDIR_P) $(platadir)/gnome-shell
	$(MKDIR_P) $(platadir)/gnome-shell/assets
	$(MKDIR_P) $(platadir)/gnome-shell/extensions
	$(MKDIR_P) $(platadir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(platadir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(platadir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_file) $(platadir)/gnome-shell
	cp -Rv $(shell_classic_file) $(platadir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_classic_readme_file) $(platadir)/gnome-shell/extensions/window-list/README
	cp -Rv $(shell_wtd_file) $(platadir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_asset_file) $(platadir)/gnome-shell/assets
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(platadir)/gnome-shell/extensions/workspaces-to-dock/assets
if !GNOME_IS_320_TO_324
	cp -Rv $(shell_gdm3_file) $(platadir)/gnome-shell
endif

	$(MKDIR_P) $(luminedir)/gnome-shell
	$(MKDIR_P) $(luminedir)/gnome-shell/assets
	$(MKDIR_P) $(luminedir)/gnome-shell/extensions
	$(MKDIR_P) $(luminedir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(luminedir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(luminedir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_lumine_file) $(luminedir)/gnome-shell
	cp -Rv $(shell_lumine_classic_file) $(luminedir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_lumine_wtd_file) $(luminedir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_lumine_asset_file) $(luminedir)/gnome-shell/assets
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(luminedir)/gnome-shell/extensions/workspaces-to-dock/assets
if !GNOME_IS_320_TO_324
	cp -Rv $(shell_lumine_gdm3_file) $(luminedir)/gnome-shell
endif

	$(MKDIR_P) $(noirdir)/gnome-shell
	$(MKDIR_P) $(noirdir)/gnome-shell/assets
	$(MKDIR_P) $(noirdir)/gnome-shell/extensions
	$(MKDIR_P) $(noirdir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(noirdir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(noirdir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_noir_file) $(noirdir)/gnome-shell
	cp -Rv $(shell_noir_classic_file) $(noirdir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_noir_wtd_file) $(noirdir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_noir_asset_file) $(noirdir)/gnome-shell/assets
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(noirdir)/gnome-shell/extensions/workspaces-to-dock/assets
if !GNOME_IS_320_TO_324
	cp -Rv $(shell_noir_gdm3_file) $(noirdir)/gnome-shell
endif

	$(MKDIR_P) $(platacompactdir)/gnome-shell
	$(MKDIR_P) $(platacompactdir)/gnome-shell/assets
	$(MKDIR_P) $(platacompactdir)/gnome-shell/extensions
	$(MKDIR_P) $(platacompactdir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(platacompactdir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(platacompactdir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_compact_file) $(platacompactdir)/gnome-shell
	cp -Rv $(shell_compact_classic_file) $(platacompactdir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_compact_wtd_file) $(platacompactdir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_compact_asset_file) $(platacompactdir)/gnome-shell/assets
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(platacompactdir)/gnome-shell/extensions/workspaces-to-dock/assets
if !GNOME_IS_320_TO_324
	cp -Rv $(shell_compact_gdm3_file) $(platacompactdir)/gnome-shell
endif

	$(MKDIR_P) $(luminecompactdir)/gnome-shell
	$(MKDIR_P) $(luminecompactdir)/gnome-shell/assets
	$(MKDIR_P) $(luminecompactdir)/gnome-shell/extensions
	$(MKDIR_P) $(luminecompactdir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(luminecompactdir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(luminecompactdir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_lumine_compact_file) $(luminecompactdir)/gnome-shell
	cp -Rv $(shell_lumine_compact_classic_file) $(luminecompactdir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_lumine_compact_wtd_file) $(luminecompactdir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_lumine_compact_asset_file) $(luminecompactdir)/gnome-shell/assets
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(luminecompactdir)/gnome-shell/extensions/workspaces-to-dock/assets
if !GNOME_IS_320_TO_324
	cp -Rv $(shell_lumine_compact_gdm3_file) $(luminecompactdir)/gnome-shell
endif

	$(MKDIR_P) $(noircompactdir)/gnome-shell
	$(MKDIR_P) $(noircompactdir)/gnome-shell/assets
	$(MKDIR_P) $(noircompactdir)/gnome-shell/extensions
	$(MKDIR_P) $(noircompactdir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(noircompactdir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(noircompactdir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_noir_compact_file) $(noircompactdir)/gnome-shell
	cp -Rv $(shell_noir_compact_classic_file) $(noircompactdir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_noir_compact_wtd_file) $(noircompactdir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_noir_compact_asset_file) $(noircompactdir)/gnome-shell/assets
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(noircompactdir)/gnome-shell/extensions/workspaces-to-dock/assets
if !GNOME_IS_320_TO_324
	cp -Rv $(shell_noir_compact_gdm3_file) $(noircompactdir)/gnome-shell
endif
endif

if ENABLE_CINNAMON
	$(MKDIR_P) $(platadir)/cinnamon
	$(MKDIR_P) $(platadir)/cinnamon/assets
	$(MKDIR_P) $(platadir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(platadir)/cinnamon/assets/menu
	$(MKDIR_P) $(platadir)/cinnamon/assets/misc
	$(MKDIR_P) $(platadir)/cinnamon/assets/panel
	$(MKDIR_P) $(platadir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_file) $(platadir)/cinnamon
	cp -Rv $(cinnamon_asset_checkbox_file) \
		$(platadir)/cinnamon/assets/checkbox
	cp -Rv $(cinnamon_asset_menu_file) \
		$(platadir)/cinnamon/assets/menu
	cp -Rv $(cinnamon_asset_misc_file) \
		$(platadir)/cinnamon/assets/misc
	cp -Rv $(cinnamon_asset_panel_file) \
		$(platadir)/cinnamon/assets/panel
	cp -Rv $(cinnamon_asset_switch_file) \
		$(platadir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_asset_thumb_file) \
		$(platadir)/cinnamon

	$(MKDIR_P) $(luminedir)/cinnamon
	$(MKDIR_P) $(luminedir)/cinnamon/assets
	$(MKDIR_P) $(luminedir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(luminedir)/cinnamon/assets/menu
	$(MKDIR_P) $(luminedir)/cinnamon/assets/misc
	$(MKDIR_P) $(luminedir)/cinnamon/assets/panel
	$(MKDIR_P) $(luminedir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_lumine_file) $(luminedir)/cinnamon
	cp -Rv $(cinnamon_lumine_asset_checkbox_file) \
		$(luminedir)/cinnamon/assets/checkbox
	cp -Rv $(cinnamon_lumine_asset_menu_file) \
		$(luminedir)/cinnamon/assets/menu
	cp -Rv $(cinnamon_lumine_asset_misc_file) \
		$(luminedir)/cinnamon/assets/misc
	cp -Rv $(cinnamon_lumine_asset_panel_file) \
		$(luminedir)/cinnamon/assets/panel
	cp -Rv $(cinnamon_lumine_asset_switch_file) \
		$(luminedir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_lumine_asset_thumb_file) \
		$(luminedir)/cinnamon

	$(MKDIR_P) $(noirdir)/cinnamon
	$(MKDIR_P) $(noirdir)/cinnamon/assets
	$(MKDIR_P) $(noirdir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(noirdir)/cinnamon/assets/menu
	$(MKDIR_P) $(noirdir)/cinnamon/assets/misc
	$(MKDIR_P) $(noirdir)/cinnamon/assets/panel
	$(MKDIR_P) $(noirdir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_noir_file) $(noirdir)/cinnamon
	cp -Rv $(cinnamon_noir_asset_checkbox_file) \
		$(noirdir)/cinnamon/assets/checkbox
	cp -Rv $(cinnamon_noir_asset_menu_file) \
		$(noirdir)/cinnamon/assets/menu
	cp -Rv $(cinnamon_noir_asset_misc_file) \
		$(noirdir)/cinnamon/assets/misc
	cp -Rv $(cinnamon_noir_asset_panel_file) \
		$(noirdir)/cinnamon/assets/panel
	cp -Rv $(cinnamon_noir_asset_switch_file) \
		$(noirdir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_noir_asset_thumb_file) \
		$(noirdir)/cinnamon
endif

# *******************
# * Uninstall files *
# *******************

uninstall-local:
if ENABLE_GNOME
	test -e $(noirdir)/gnome-shell && rm -rfv $(noirdir)/gnome-shell
	test -e $(luminedir)/gnome-shell && rm -rfv $(luminedir)/gnome-shell
	test -e $(platadir)/gnome-shell && rm -rfv $(platadir)/gnome-shell
	test -e $(noircompactdir)/gnome-shell && rm -rfv $(noircompactdir)/gnome-shell
	test -e $(luminecompactdir)/gnome-shell && rm -rfv $(luminecompactdir)/gnome-shell
	test -e $(platacompactdir)/gnome-shell && rm -rfv $(platacompactdir)/gnome-shell
endif

if ENABLE_CINNAMON
	test -e $(noirdir)/cinnamon && rm -rfv $(noirdir)/cinnamon
	test -e $(luminedir)/cinnamon && rm -rfv $(luminedir)/cinnamon
	test -e $(platadir)/cinnamon && rm -rfv $(platadir)/cinnamon
endif

# ****************************
# * Clean up generated files *
# ****************************

CLEANFILES =
if ENABLE_GNOME
CLEANFILES += \
	$(srcdir)/gnome-shell/gnome-shell.css \
	$(srcdir)/gnome-shell-light/gnome-shell.css \
	$(srcdir)/gnome-shell-dark/gnome-shell.css \
	$(srcdir)/gnome-shell-compact/gnome-shell.css \
	$(srcdir)/gnome-shell-light-compact/gnome-shell.css \
	$(srcdir)/gnome-shell-dark-compact/gnome-shell.css \
	$(srcdir)/gnome-shell/pad-osd.css \
	$(srcdir)/gnome-shell-light/pad-osd.css \
	$(srcdir)/gnome-shell-dark/pad-osd.css \
	$(srcdir)/gnome-shell-compact/pad-osd.css \
	$(srcdir)/gnome-shell-light-compact/pad-osd.css \
	$(srcdir)/gnome-shell-dark-compact/pad-osd.css \
	$(srcdir)/gnome-shell/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell-light/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell-dark/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell-compact/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell-light-compact/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell-dark-compact/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell-light/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell-dark/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell-compact/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell-light-compact/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell-dark-compact/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell-light/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell-dark/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell-compact/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell-light-compact/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell-dark-compact/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell-light/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell-dark/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell-compact/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell-light-compact/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell-dark-compact/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell/*.svg \
	$(srcdir)/gnome-shell/*.png \
	$(srcdir)/gnome-shell/assets/*.svg \
	$(srcdir)/gnome-shell/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/gnome-shell-light/*.svg \
	$(srcdir)/gnome-shell-light/*.png \
	$(srcdir)/gnome-shell-light/assets/*.svg \
	$(srcdir)/gnome-shell-light/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/gnome-shell-dark/*.svg \
	$(srcdir)/gnome-shell-dark/*.png \
	$(srcdir)/gnome-shell-dark/assets/*.svg \
	$(srcdir)/gnome-shell-dark/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/gnome-shell-compact/*.svg \
	$(srcdir)/gnome-shell-compact/*.png \
	$(srcdir)/gnome-shell-compact/assets/*.svg \
	$(srcdir)/gnome-shell-compact/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/gnome-shell-light-compact/*.svg \
	$(srcdir)/gnome-shell-light-compact/*.png \
	$(srcdir)/gnome-shell-light-compact/assets/*.svg \
	$(srcdir)/gnome-shell-light-compact/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/gnome-shell-dark-compact/*.svg \
	$(srcdir)/gnome-shell-dark-compact/*.png \
	$(srcdir)/gnome-shell-dark-compact/assets/*.svg \
	$(srcdir)/gnome-shell-dark-compact/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/asset/assets-gnome-shell/common/checkbox-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/common/checkbox.svg \
	$(srcdir)/asset/assets-gnome-shell/common/dash-placeholder.svg \
	$(srcdir)/asset/assets-gnome-shell/common/go-down.svg \
	$(srcdir)/asset/assets-gnome-shell/common/go-up.svg \
	$(srcdir)/asset/assets-gnome-shell/common/key-shift-latched-uppercase.svg \
	$(srcdir)/asset/assets-gnome-shell/common/key-shift-uppercase.svg \
	$(srcdir)/asset/assets-gnome-shell/common/media-control-active.svg \
	$(srcdir)/asset/assets-gnome-shell/common/media-control-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/common/more-results.svg \
	$(srcdir)/asset/assets-gnome-shell/common/process-working.svg \
	$(srcdir)/asset/assets-gnome-shell/common/toggle-on.svg \
	$(srcdir)/asset/assets-gnome-shell/common/window-close.svg \
	$(srcdir)/asset/assets-gnome-shell/common/window-close-active.svg \
	$(srcdir)/asset/assets-gnome-shell/common/window-close-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/workspaces-to-dock/*.svg
if !GNOME_IS_320_TO_324
CLEANFILES += \
	$(srcdir)/gnome-shell/gdm3-Plata.css \
	$(srcdir)/gnome-shell-light/gdm3-Plata-Lumine.css \
	$(srcdir)/gnome-shell-dark/gdm3-Plata-Noir.css \
	$(srcdir)/gnome-shell-compact/gdm3-Plata-Compact.css \
	$(srcdir)/gnome-shell-light-compact/gdm3-Plata-Lumine-Compact.css \
	$(srcdir)/gnome-shell-dark-compact/gdm3-Plata-Noir-Compact.css
endif
endif

if ENABLE_CINNAMON
CLEANFILES += \
	$(srcdir)/cinnamon/cinnamon.css \
	$(srcdir)/cinnamon-light/cinnamon.css \
	$(srcdir)/cinnamon-dark/cinnamon.css \
	$(srcdir)/cinnamon/assets/thumbnail.png \
	$(srcdir)/cinnamon-light/assets/thumbnail.png \
	$(srcdir)/cinnamon-dark/assets/thumbnail.png \
	$(srcdir)/cinnamon/assets/*/*.svg \
	$(srcdir)/cinnamon-light/assets/*/*.svg \
	$(srcdir)/cinnamon-dark/assets/*/*.svg \
	$(srcdir)/asset/assets-cinnamon/common/checkbox/*.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/add-workspace-active.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/close.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/close-active.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/close-hover.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/message.svg \
	$(srcdir)/asset/assets-cinnamon/common/panel/activities-active.svg \
	$(srcdir)/asset/assets-cinnamon/common/panel/window-list-active-bottom.svg \
	$(srcdir)/asset/assets-cinnamon/common/panel/window-list-active-top.svg \
	$(srcdir)/asset/assets-cinnamon/common/switch/switch-on.svg \
	$(srcdir)/asset/assets-cinnamon/light/misc/thumbnail.svg \
	$(srcdir)/asset/assets-cinnamon/mixed/misc/thumbnail.svg \
	$(srcdir)/asset/assets-cinnamon/dark/misc/thumbnail.svg \
	$(srcdir)/asset/inkscape.log
endif

DISTCLEANFILES = \
	$(CLEANFILES)
